--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <center>
   	<h3 class="btn btn-warning">AI DJ WEB APP
 	    <br>
-	    <span>NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
-        Move your right-hand wrist up and down for increasing and decreasing the speed</span>
+	    <span>NOTE - Move left and right wrist for playing different music</span>
   	</h3>
 	<br><br>
     <span><h2 class="btn btn-danger">SONG : </h2> <h2 class="btn btn-success result_name"></h2></span>
