--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body background="background.png">
 <center>
-  	<h3 class="btn btn-warning">AI DJ WEB APP
+  	<h3 class="btn btn-warning">MULTI-MUSIC WEB APP
 	    <br>
 	    <span>NOTE - Move left and right wrist for playing different music</span>
   	</h3>
