--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
+
 
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 
@@ -16,13 +18,12 @@
 </head>
 <body background="background.png">
 <center>
-  	<h3 class="btn btn-warning">AI DJ WEB APP
+  	<<h3 class="btn btn-warning">MULTI-MUSIC WEB APP
 	    <br>
-	    <span>NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
-        Move your right-hand wrist up and down for increasing and decreasing the speed</span>
+	    <span>NOTE - Move left and right wrist for playing different music</span>
   	</h3>
 	<br><br>
-    <span><h2 class="btn btn-danger">SONG : </h2> <h2 class="btn btn-success result_name"></h2></span>
+    <span><h2 class="btn btn-danger">SONG : </h2> <h2 class="btn btn-success result_name" id="song_name"></h2></span>
 </center>
 
 <script src="main.js"></script>
